# wyn

./: BUGS.txt  CLAUDE.md  Cargo.toml  DEBUG.md  GRAMMAR.txt  MODULES-IMPL.md  MODULES.md  NOTES-2025-12-08.txt  PLAN-add-nodeids-to-mir.md  README.md  SPECIFICATION.md  SYNTAX_REFACTOR_WIP.md  WIP-mir-symbol-ids.md  builtins.runic  builtins.wyn  closure_test.wyn  complete_example.spv  complete_shader_example.spv  debug_test.wyn  full_output.txt  rustfmt.toml  simple_closure_test.wyn  simple_test.wyn  simple_test_debug.wyn  test.wyn  test_annotated.output  test_annotator.wyn  test_arrays.wyn  test_builtins.wyn  test_cfg_demo.rs  test_coda.wyn  test_const_index.spv  test_const_index.wyn  test_constants.spv  test_cos.spv  test_cos.wyn  test_fragment.wyn  test_functions.wyn  test_map_shader.spv  test_map_shader.wyn  (+18 more)
compiler/: Cargo.toml
docs/: mir-symbol-ids-plan.md
driver/: Cargo.toml
examples/: IMPLEMENTATION_PLAN.md  math_prelude.wyn  spinning_cube.wyn
gasm/: Cargo.toml  SPEC.md
gdp/: Cargo.toml
issues/: array-indexing-loop-performance.md
prelude/: f32.wyn  gdp.wyn  graphics.wyn  math.wyn  rand.wyn  soacs.wyn
scripts/: validate_testfiles.nu
testfiles/: closure_test.wyn  complete_shader_example.spv  complete_shader_example.wyn  compute_test.wyn  da_rasterizer.spv  da_rasterizer.wyn  de_rasterizer.wyn  debug_test.wyn  direct_closure_test.wyn  entrylevel.wyn  holodice.wyn  invalid_uniform.wyn  lava.wyn  length_test.wyn  minimal_vec.wyn  primitives.wyn  red_triangle.wyn  red_triangle_curried.wyn  seascape.wyn  simple_closure_test.wyn  simple_field.wyn  simple_if_test.wyn  test.wyn  test_all_operators.wyn  test_borrow.wyn  test_constants.wyn  test_constants_simple.wyn  test_curry_noparen.wyn  (+30 more)
wyn-analyzer/: Cargo.toml
wyn-analyzer/src/: main.rs
wyn-core/: Cargo.toml  builtins.wyn  gdp_builtins.gasm
wyn-core/builtins/: gdp_builtins.gasm  test_func.gasm
wyn-core/src/: alias_checker.rs  alias_checker_tests.rs  annotator.rs  ast.rs  ast_const_fold.rs  binding_lifter.rs  binding_lifter_tests.rs  borrow_checker.rs  builtin_registry.rs  builtins.rs  cfg.rs  cfg_nemo.rs  codegen.rs  codegen_global.rs  constant_folding.rs  constant_folding_tests.rs  defun_analysis.rs  defunctionalization.rs  defunctionalization_tests.rs  desugar.rs  diags.rs  error.rs  flattening.rs  flattening_tests.rs  gasm_lowering.rs  impl_source.rs  inference.rs  integration_tests.rs  lexer.rs  lib.rs  lir.rs  lirize.rs  lowering.rs  lowering_common.rs  materialize_hoisting.rs  mir.rs  mirize.rs  mirize_tests.rs  module_manager.rs  monomorphization.rs  (+15 more)
wyn-core/src/codegen/: global.rs  mod.rs  scope.rs
wyn-core/src/glsl/: lowering.rs  mod.rs
wyn-core/src/lexer/: literal.rs
wyn-core/src/mir/: folder.rs  mod.rs  tests.rs  visitor.rs
wyn-core/src/module/: env.rs  mod.rs  tests.rs
wyn-core/src/module_manager/: mod.rs  tests.rs
wyn-core/src/parser/: module.rs  pattern.rs  tests.rs
wyn-core/src/spirv/: lowering.rs  mod.rs
wyn-core/src/types/: checker.rs  checker_tests.rs  mod.rs
wyn-core/tests/: defunctionalization_tests.rs  test_gasm_lowering.rs  test_gdp_builtins.rs
(+24 files in other folders)
