[workspace]
members = ["wyn-core", "wyn"]
resolver = "2"
exclude = [ "viewer" ]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Wyn Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
nom = "7.1"
polytype = "7.0"
spirv = "0.3"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
