[workspace]
members = ["wyn-core", "wyn", "spirv-validator"]
resolver = "2"
exclude = [ "viz" ]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Wyn Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
nom = "7.1"
polytype = "7.0"
spirv = "0.3"
log = "0.4"
env_logger = "0.11"
inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "50c16a644c6f5d5b41c27cc1620d63097cad43dd", features = ["llvm20-1"] }
