[package]
name = "wyn-analyzer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Language server for the Wyn programming language"

[[bin]]
name = "wyn-analyzer"
path = "src/main.rs"

[dependencies]
wyn-core = { path = "../wyn-core" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
