[package]
name = "wyn-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
nom.workspace = true
polytype.workspace = true
spirv.workspace = true
log.workspace = true
rspirv = "0.12"
nemo = { git = "https://github.com/knowsys/nemo", tag = "v0.8.0" }

[dev-dependencies]
env_logger.workspace = true
naga = { version = "22.0", features = ["spv-in"] }
anyhow = "1.0"
